--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "db:write:update": "node scripts/write-to-supabase.js update",
     "db:write:delete": "node scripts/write-to-supabase.js delete",
     "db:create:all": "node scripts/auto-create-tables.js create",
-    "db:verify": "node scripts/auto-create-tables.js verify"
+    "db:verify": "node scripts/auto-create-tables.js verify",
+    "db:sample": "node scripts/create-sample-data.js",
+    "db:analyze": "node scripts/analyze-database.js"
   },
   "dependencies": {
     "@emotion/is-prop-valid": "latest",
