--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "test:crud": "node scripts/test-crud-operations.js",
     "test:storage": "node scripts/test-storage-operations.js",
     "test:rls": "node scripts/verify-rls-status.js",
-    "test:all": "npm run test:crud && npm run test:storage && npm run test:rls"
+    "test:all": "npm run test:crud && npm run test:storage && npm run test:rls",
+    "storage:create": "node scripts/create-storage-buckets.js"
   },
   "dependencies": {
     "@emotion/is-prop-valid": "latest",
