Fix storage RLS policies: Replace auth.role() with auth.uid() for image uploads
- Created comprehensive migration for all storage buckets
- Fixed RLS policies to use auth.uid() IS NOT NULL instead of auth.role()
- Added scripts for automatic and manual migration application
- Created documentation and guides for the fix
- Resolves 'new row violates row-level security policy' error

--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "test:rls": "node scripts/verify-rls-status.js",
     "test:all": "npm run test:crud && npm run test:storage && npm run test:rls",
     "storage:create": "node scripts/create-storage-buckets.js",
+    "storage:fix-rls": "node scripts/apply-storage-rls-fix.js",
+    "storage:fix-rls:show": "node scripts/apply-storage-rls-fix-simple.js",
     "admin:create": "node scripts/create-admin-user.js"
   },
   "dependencies": {
