Update admin panel to match shadcn dark theme - Replace glassmorphism with solid dark cards, update colors and styling

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
+    "dev": "next dev -p 3002",
     "lint": "eslint .",
     "start": "next start",
     "migrate": "node run-migrations-auto.js",
