Complete admin panel implementation: Offers/Tasks CRUD, server actions, form sheets, real-time updates, and UI improvements
- Added server actions for Offers and Tasks with Zod validation
- Created AdminOfferFormSheet and AdminTaskFormSheet components
- Modernized Offers and Tasks pages with AdminPageWrapper
- Fixed Select component empty string values (replaced with 'all')
- Connected properties filters to backend (regions, agents from Supabase)
- Updated useProperties hook to handle 'all' filter values and agent filtering
- Fixed dashboard isLoading variable reference
- Updated sidebar navigation items to white bold text
- Added real-time subscriptions to data hooks
- Fixed hydration errors and runtime errors
- All pages now use real backend data (no mock data)

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev -p 3002",
+    "dev": "next dev -p 3010",
     "lint": "eslint .",
     "start": "next start",
     "migrate": "node run-migrations-auto.js",
@@ -17,14 +17,13 @@
     "db:reset": "supabase db reset",
     "db:reset:safe": "node scripts/safe-reset.js",
     "db:seed": "type supabase\\seed.sql | supabase db execute",
-    "db:verify": "type supabase\\verify.sql | supabase db execute",
+    "db:verify": "node scripts/auto-create-tables.js verify",
     "db:types": "supabase gen types typescript --linked > lib/database.types.ts",
     "db:write": "node scripts/write-to-supabase.js",
     "db:write:insert": "node scripts/write-to-supabase.js insert",
     "db:write:update": "node scripts/write-to-supabase.js update",
     "db:write:delete": "node scripts/write-to-supabase.js delete",
     "db:create:all": "node scripts/auto-create-tables.js create",
-    "db:verify": "node scripts/auto-create-tables.js verify",
     "db:sample": "node scripts/create-sample-data.js",
     "db:analyze": "node scripts/analyze-database.js",
     "test:crud": "node scripts/test-crud-operations.js",
@@ -39,6 +38,9 @@
     "admin:create": "node scripts/create-admin-user.js"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@emotion/is-prop-valid": "latest",
     "@hookform/resolvers": "^3.10.0",
     "@nuxt/kit": "latest",
@@ -71,6 +73,9 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@tanstack/react-query": "^5.90.9",
+    "@tanstack/react-query-devtools": "^5.90.2",
+    "@tanstack/react-table": "^8.21.3",
     "@vercel/analytics": "latest",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
@@ -79,6 +84,7 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "latest",
+    "html2canvas": "^1.4.1",
     "input-otp": "1.4.1",
     "lenis": "latest",
     "lucide-react": "^0.454.0",
